<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu" >
    <item android:id="@+id/ip_menu" android:showAsAction="always" android:title="@string/ip" android:icon="@drawable/ic_ip">
    	<menu>
	    	<group android:id="@+id/list_ip_menu"  android:visible="true" >
	        </group>
        </menu>
    </item>
    <item android:id="@+id/profile_menu" android:showAsAction="always|withText" android:title="@string/profile" android:icon="@drawable/ic_profile">
        <menu>
            <group android:id="@+id/list_profile_menu" android:checkableBehavior="single" android:visible="true" >
            </group>
            
            <item android:id="@+id/save" android:title="@string/save" android:orderInCategory="98" android:icon="@drawable/ic_save"/>
            <item android:id="@+id/clear" android:title="@string/clear" android:orderInCategory="99" android:icon="@drawable/ic_trash"/>
        </menu>
    </item>
</menu>